--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Iteration 2 Project</title>
     <script src="phaser.js"></script>
+    <script type="text/javascript"
+            src="https://github.com/jdotrjs/phaser3-nineslice/releases/download/v0.5.0/nineslice.min.js"></script>
     <link rel="shortcut icon" href="favicon.ico" />
     <style>
         html, body {
@@ -30,6 +32,7 @@
     <script src="ArrayFunctions.js"></script>
     <script src="AnimationManager.js"></script>
     <script src="TouchManager.js"></script>
+    <script src="UIManager.js"></script>
 
     <!-- Base Clases -->
     <script src="BaseScene.js"></script>
@@ -39,6 +42,10 @@
 
     <!-- Tiles -->
     <script src="WaterTile.js"></script>
+
+    <!-- Units -->
+    <script src="UnitArcher.js"></script>
+    <script src="UnitKnight.js"></script>
 
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
