--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <script src="BaseTile.js"></script>
     <script src="BaseUnit.js"></script>
     <script src="BaseContext.js"></script>
+    <script src="BaseAction.js"></script>
+    <script src="BaseActionUI.js"></script>
 
     <!-- Tiles -->
     <script src="WaterTile.js"></script>
@@ -46,6 +48,7 @@
     <!-- Units -->
     <script src="UnitArcher.js"></script>
     <script src="UnitKnight.js"></script>
+    <script src="UnitSkeleton.js"></script>
 
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
