Displaying tiles to press for move

--- a/index.html
+++ b/index.html
@@ -44,11 +44,16 @@
 
     <!-- Tiles -->
     <script src="WaterTile.js"></script>
+    <script src="ReferenceTile.js"></script>
 
     <!-- Units -->
     <script src="UnitArcher.js"></script>
     <script src="UnitKnight.js"></script>
     <script src="UnitSkeleton.js"></script>
+
+    <!-- Actions -->
+    <script src="MoveAction.js"></script>
+    <script src="DashAction.js"></script>
 
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
