Applying actions and queuing

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="BaseContext.js"></script>
     <script src="BaseAction.js"></script>
     <script src="BaseActionUI.js"></script>
+    <script src="BaseQueueBar.js"></script>
 
     <!-- Tiles -->
     <script src="WaterTile.js"></script>
@@ -57,6 +58,7 @@
 
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
+    <script src="ContextSelectTiles.js"></script>
 
     <!-- Phaser Game -->
     <script src="game.js"></script>
