Turn play, moving units, dash fixed slightly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Iteration 2 Project</title>
     <script src="phaser.js"></script>
     <script type="text/javascript"
-            src="https://github.com/jdotrjs/phaser3-nineslice/releases/download/v0.5.0/nineslice.min.js"></script>
+            src="nineslice.js"></script>
     <link rel="shortcut icon" href="favicon.ico" />
     <style>
         html, body {
