Move Action now collides
Units can now detect where they should stop depending on units on their path, when that information is relevant e.g. next tile.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
     <script src="ContextSelectTiles.js"></script>
+    <script src="ContextAdvancing.js"></script>
 
     <!-- Phaser Game -->
     <script src="game.js"></script>
