--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <script src="ContextAdvancing.js"></script>
 
     <!-- Phaser Game -->
-    <script src="game.js"></script>
+    <script src="Game.js"></script>
     <div id="game" style="overflow: hidden; width: 100%; height: 100%;"></div>
 </body>
 </html>
