--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <!-- Actions -->
     <script src="MoveAction.js"></script>
     <script src="DashAction.js"></script>
+    <script src="ShootArrowAction.js"></script>
 
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
