--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="BaseAction.js"></script>
     <script src="BaseActionUI.js"></script>
     <script src="BaseQueueBar.js"></script>
+    <script src="BaseHealthBar.js"></script>
 
     <!-- Tiles -->
     <script src="WaterTile.js"></script>
@@ -61,6 +62,9 @@
     <script src="ContextNone.js"></script>
     <script src="ContextSelectTiles.js"></script>
     <script src="ContextAdvancing.js"></script>
+
+    <!-- Bars -->
+    <script src="BarStamina.js"></script>
 
     <!-- Phaser Game -->
     <script src="Game.js"></script>
