--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <script src="MoveAction.js"></script>
     <script src="DashAction.js"></script>
     <script src="ShootArrowAction.js"></script>
+    <script src="SwingSwordAction.js"></script>
 
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
