Units now die properly & Enemy stamina use hidden

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="DashAction.js"></script>
     <script src="ShootArrowAction.js"></script>
     <script src="SwingSwordAction.js"></script>
+    <script src="StabAction.js"></script>
 
     <!-- Touch Contexts -->
     <script src="ContextNone.js"></script>
