Min version of Phaser for deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Iteration 2 Project</title>
-    <script src="phaser.js"></script>
+    <script src="phaser.min.js"></script>
     <script type="text/javascript"
             src="nineslice.js"></script>
     <link rel="shortcut icon" href="favicon.ico" />
